@@ -2,6 +2,7 @@ CHANGELOG
 
 UNRELEASED
   * CHORE : Update qs to 5.2.0
+  * FEATURE : getStateAsQueryString now orders the serialized parameters
 
 2.4.0 - 2015-09-23
   * FEATURE : add AlgoliaSearchHelper.getState(filters) to get a filtered state
